--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 {
   "compilerOptions": {
-    "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true,
     "declaration": true,
     "declarationMap": true,
-    "downlevelIteration": true,
-    "emitDecoratorMetadata": true,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
-    "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
+    "ignoreDeprecations": "5.0",
     "importHelpers": true,
     "lib": ["ES2020", "DOM"],
     "module": "ES2020",
@@ -19,28 +16,14 @@
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noLib": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "preserveSymlinks": true,
-    "removeComments": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-
     "rootDir": "./src",
-    "outDir": "./dist",
-    "emitDeclarationOnly": true,
-    "ignoreDeprecations": "5.0"
-
+    "outDir": "./dist"
   },
-  "include": ["src"],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
-  }
+  "include": ["src"]
+}
