--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@trili/tezos-provider",
   "description": "Tezos Provider for WalletConnect Protocol",
-  "version": "1.0.4",
+  "version": "1.0.7",
   "author": "Trilitech TriliTech <contact@trili.tech> (https://trili.tech)",
   "homepage": "https://trili.tech",
   "repository": {
@@ -17,7 +17,8 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
     }
   },
   "files": [
@@ -25,7 +26,10 @@
   ],
   "keywords": [
     "wallet",
-    "walletconnect"
+    "walletconnect",
+    "tezos",
+    "provider",
+    "blockchain"
   ],
   "scripts": {
     "clean": "rm -rf dist",
@@ -56,27 +60,25 @@
     ]
   },
   "dependencies": {
-    "@airgap/beacon-types": "^4.3.1",
-    "@taquito/rpc": "^20.1.0",
-    "@taquito/taquito": "^20.1.0",
-    "@walletconnect/keyvaluestorage": "^1.1.1",
-    "@walletconnect/logger": "^2.1.2",
-    "@walletconnect/types": "^2.17.2",
-    "@walletconnect/universal-provider": "^2.17.2",
-    "micromatch": "^4.0.8",
-    "package.json": "^2.0.1"
+    "micromatch": "^4.0.8"
   },
   "peerDependencies": {
-    "@airgap/beacon-types": "^4.2.2",
-    "@taquito/rpc": "~20.0.1",
-    "@taquito/taquito": "~20.0.1",
-    "@trili/tezos-provider": "^1.0.2",
-    "@walletconnect/keyvaluestorage": "^1.1.1",
-    "@walletconnect/logger": "^2.1.2",
-    "@walletconnect/types": "2.13.3",
-    "@walletconnect/universal-provider": "^2.17.1"
+    "@airgap/beacon-types": "^4.3.1",
+    "@taquito/rpc": "^20.0.1",
+    "@taquito/taquito": "^20.1.0",
+    "@walletconnect/keyvaluestorage": ">=1.1.1",
+    "@walletconnect/logger": ">=2.1.2",
+    "@walletconnect/types": ">=2.17.2",
+    "@walletconnect/universal-provider": "^2.17.2"
   },
   "devDependencies": {
+    "@airgap/beacon-types": "^4.3.1",
+    "@taquito/rpc": "^20.0.1",
+    "@taquito/taquito": "^20.1.0",
+    "@walletconnect/keyvaluestorage": ">=1.1.1",
+    "@walletconnect/logger": ">=2.1.2",
+    "@walletconnect/types": ">=2.17.2",
+    "@walletconnect/universal-provider": "^2.17.2",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.13",
     "@types/micromatch": "^4",
@@ -90,12 +92,12 @@
     "install-peerdeps": "^3.0.3",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "rollup": "^4.24.0",
     "ts-jest": "^29.2.5",
     "tsup": "^8.2.4",
     "typescript": "^5.6.3"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=18",
+    "yarn": ">=1.22"
   }
 }
