--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@trili/tezos-provider",
   "description": "Tezos Provider for WalletConnect Protocol",
-  "version": "1.0.9",
+  "version": "1.0.18",
   "author": "Trilitech TriliTech <contact@trili.tech> (https://trili.tech)",
   "homepage": "https://trili.tech",
   "repository": {
@@ -89,7 +89,11 @@
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-sort-keys": "^2.3.5",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "install-peerdeps": "^3.0.3",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
