--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,6 @@
     "rootDir": "./src",
     "outDir": "./dist"
   },
-  "include": ["src"]
+  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
